--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,32 +10,48 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+defaults:
+  run:
+    shell: bash
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      HUGO_VERSION: 0.126.0
     steps:
+      - name: Install Hugo CLI
+        run: |
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+      - name: Install Dart Sass
+        run: sudo snap install dart-sass
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Checkout Flex theme
-        uses: actions/checkout@v4
-        with:
-          repository: alexandrevicenzi/Flex
-          path: Flex
-          ref: v2.5.0
-      - name: Setup PDM
-        uses: pdm-project/setup-pdm@v4
-        with:
-          python-version: 3.11
-          cache: true
-      - name: Install dependencies
-        run: pdm install
-      - name: Build pages
-        run: pdm run make publish
-      - name: Upload pages artifact
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
+      - name: Install Node.js dependencies
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      - name: Build with Hugo
+        env:
+          # For maximum backward compatibility with Hugo modules
+          HUGO_ENVIRONMENT: production
+          HUGO_ENV: production
+          TZ: Europe/Oslo
+        run: |
+          hugo \
+            --gc \
+            --minify \
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: output
-
+          path: ./public
   deploy:
     runs-on: ubuntu-latest
     environment:
