Actually put it on the correct url

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL "https://kaveland.no"
           git branch -D static-pages || true
           git checkout -b static-pages
           git add -f public
