--- a/mise.toml
+++ b/mise.toml
@@ -1,6 +1,6 @@
 [tools]
 hugo = "0.145.0"
-"ubi:kaaveland/bunnysync" = "latest"
+"ubi:kaaveland/thumper" = "latest"
 
 [tasks.build]
 description = "Build the blog pages"
@@ -13,4 +13,4 @@ run = "rm -rf public"
 [tasks.deploy]
 description = "Deploy the blog pages"
 depends = ["clean", "build"]
-run = "bunnysync sync public kaveland --ignore eugene --verbose && bunnysync purge-zone kaveland"
+run = "thumper sync public kaveland --ignore eugene --verbose && thumper purge-zone kaveland"
